2003-09-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Some PGSTD::string & parameters should have been const
 test/test002.cxx
  - Fixed some mistakes in testing PQftable support
2003-09-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/*:
  - Moved header contents to .hxx files for filetype recognition
2003-09-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result:
  - Replaced two obsolete calls to Column() by column()
  - Test coverage for column type / column name functions
2003-09-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Added check for PQfreeNotify()
  - Check for using-declaration overloading problem in gcc 2.95.3
 include/pqxx/largeobject:
  - Workaround for using-declaration overloading problem
 include/pqxx/util:
  - Use PQfreeNotify() if available and appropriate
  - Added <cctype> include
2003-07-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result:
  - Added support for PQftable().  Thanks Adam Pigg!
  - Deprecated tuple::Row() in favour of row_number()
2003-07-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/all:
  - Replaced with include/pqxx/pqxx to fix automake problem
 include/pqxx/*, src/*.cxx, test/test*.cxx:
  - Deprecated lots of functions with upper-case letters in names
  - Made old functions available if old-style headers are included
2003-06-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.sgml:
  - Replaced by libpqxx.xml
 doc/libpqxx.xml:
  - New.  Thanks Wichert Akkerman!
 DoxyFile:
  - Added new header files
 include/pqxx/connection_base, include/pqxx/transaction_base,
 src/tablestream.cxx:
  - Fix crash closing tablestream on nonexistant table (thx Sean [Rogers?])
 include/pqxx/except:
  - Moved exception classes back into pqxx namespace where they belong
2003-06-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/*.h:
  - Deprecated; new headers have names not ending in ".h"
  - All backwards compatibility support restricted to old headers