@@ -1,0 +1,56 @@
+/* include/pqxx/config.h.in.  Generated from configure.ac by autoheader.  */
+
+/* Define if std defines the char_traits template and <char> specialization */
+#undef HAVE_CHAR_TRAITS
+
+/* Define to 1 if you have the <iterator> header file. */
+#undef HAVE_ITERATOR
+
+/* Define to 1 if you have the <limits> header file. */
+#undef HAVE_LIMITS
+
+/* Define to 1 if the system has the type `ptrdiff_t'. */
+#undef HAVE_PTRDIFF_T
+
+/* Do we have InvalidOid definition? */
+#undef InvalidOid
+
+/* Does the standard namespace exist? */
+#undef PGSTD
+
+/* Define if <iterator> lacks an iterator template definition */
+#undef PQXX_BROKEN_ITERATOR
+
+/* Define if function overloading using "using" breaks */
+#undef PQXX_BROKEN_USING_DECL
+
+/* Define if PostgreSQL has PQescapeString() */
+#undef PQXX_HAVE_PQESCAPESTRING
+
+/* Define if PostgreSQL has PQfreemem() */
+#undef PQXX_HAVE_PQFREEMEM
+
+/* Define if PostgreSQL has PQfreeNotify() */
+#undef PQXX_HAVE_PQFREENOTIFY
+
+/* Define if PostgreSQL has PQftable() */
+#undef PQXX_HAVE_PQFTABLE
+
+/* Define if you have the <streambuf> header; if not, <streambuf.h> is used */
+#undef PQXX_HAVE_STREAMBUF
+
+/* Do we have a PQescapeString function? */
+#undef PQescapeString
+
+/* Do we have a PQfreeNotify function? */
+#undef PQfreeNotify
+
+/* Do we have a PQfreemem function? */
+#undef PQfreemem
+
+/* Do we have a PQftable function? */
+#undef PQftable
+
+/* Define to `unsigned' if <sys/types.h> does not define. */
+#undef size_t
+
