@@ -15,6 +15,7 @@
  *
  *-------------------------------------------------------------------------
  */
+#include "pqxx/config.h"
 
 #include "pqxx/connection"
 
