@@ -15,6 +15,8 @@
  *
  *-------------------------------------------------------------------------
  */
+#include "pqxx/config.h"
+
 #include <stdexcept>
 
 #include "pqxx/connection_base"
